0.20.x/_sources/api/skimage.measure.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`measure`
======================
.. automodule:: skimage.measure

.. currentmodule:: skimage.measure
.. autosummary::

   skimage.measure.approximate_polygon
   skimage.measure.block_reduce
   skimage.measure.blur_effect
   skimage.measure.euler_number
   skimage.measure.find_contours
   skimage.measure.grid_points_in_poly
   skimage.measure.inertia_tensor
   skimage.measure.inertia_tensor_eigvals
   skimage.measure.intersection_coeff
   skimage.measure.label
   skimage.measure.manders_coloc_coeff
   skimage.measure.manders_overlap_coeff
   skimage.measure.marching_cubes
   skimage.measure.mesh_surface_area
   skimage.measure.moments
   skimage.measure.moments_central
   skimage.measure.moments_coords
   skimage.measure.moments_coords_central
   skimage.measure.moments_hu
   skimage.measure.moments_normalized
   skimage.measure.pearson_corr_coeff
   skimage.measure.perimeter
   skimage.measure.perimeter_crofton
   skimage.measure.points_in_poly
   skimage.measure.profile_line
   skimage.measure.ransac
   skimage.measure.regionprops
   skimage.measure.regionprops_table
   skimage.measure.shannon_entropy
   skimage.measure.subdivide_polygon

   skimage.measure.CircleModel
   skimage.measure.EllipseModel
   skimage.measure.LineModelND


approximate_polygon
-------------------

.. autofunction:: skimage.measure.approximate_polygon


.. include:: skimage.measure.approximate_polygon.examples

block_reduce
------------

.. autofunction:: skimage.measure.block_reduce


.. include:: skimage.measure.block_reduce.examples

blur_effect
-----------

.. autofunction:: skimage.measure.blur_effect


.. include:: skimage.measure.blur_effect.examples

euler_number
------------

.. autofunction:: skimage.measure.euler_number


.. include:: skimage.measure.euler_number.examples

find_contours
-------------

.. autofunction:: skimage.measure.find_contours


.. include:: skimage.measure.find_contours.examples

grid_points_in_poly
-------------------

.. autofunction:: skimage.measure.grid_points_in_poly


.. include:: skimage.measure.grid_points_in_poly.examples

inertia_tensor
--------------

.. autofunction:: skimage.measure.inertia_tensor


.. include:: skimage.measure.inertia_tensor.examples

inertia_tensor_eigvals
----------------------

.. autofunction:: skimage.measure.inertia_tensor_eigvals


.. include:: skimage.measure.inertia_tensor_eigvals.examples

intersection_coeff
------------------

.. autofunction:: skimage.measure.intersection_coeff


.. include:: skimage.measure.intersection_coeff.examples

label
-----

.. autofunction:: skimage.measure.label


.. include:: skimage.measure.label.examples

manders_coloc_coeff
-------------------

.. autofunction:: skimage.measure.manders_coloc_coeff


.. include:: skimage.measure.manders_coloc_coeff.examples

manders_overlap_coeff
---------------------

.. autofunction:: skimage.measure.manders_overlap_coeff


.. include:: skimage.measure.manders_overlap_coeff.examples

marching_cubes
--------------

.. autofunction:: skimage.measure.marching_cubes


.. include:: skimage.measure.marching_cubes.examples

mesh_surface_area
-----------------

.. autofunction:: skimage.measure.mesh_surface_area


.. include:: skimage.measure.mesh_surface_area.examples

moments
-------

.. autofunction:: skimage.measure.moments


.. include:: skimage.measure.moments.examples

moments_central
---------------

.. autofunction:: skimage.measure.moments_central


.. include:: skimage.measure.moments_central.examples

moments_coords
--------------

.. autofunction:: skimage.measure.moments_coords


.. include:: skimage.measure.moments_coords.examples

moments_coords_central
----------------------

.. autofunction:: skimage.measure.moments_coords_central


.. include:: skimage.measure.moments_coords_central.examples

moments_hu
----------

.. autofunction:: skimage.measure.moments_hu


.. include:: skimage.measure.moments_hu.examples

moments_normalized
------------------

.. autofunction:: skimage.measure.moments_normalized


.. include:: skimage.measure.moments_normalized.examples

pearson_corr_coeff
------------------

.. autofunction:: skimage.measure.pearson_corr_coeff


.. include:: skimage.measure.pearson_corr_coeff.examples

perimeter
---------

.. autofunction:: skimage.measure.perimeter


.. include:: skimage.measure.perimeter.examples

perimeter_crofton
-----------------

.. autofunction:: skimage.measure.perimeter_crofton


.. include:: skimage.measure.perimeter_crofton.examples

points_in_poly
--------------

.. autofunction:: skimage.measure.points_in_poly


.. include:: skimage.measure.points_in_poly.examples

profile_line
------------

.. autofunction:: skimage.measure.profile_line


.. include:: skimage.measure.profile_line.examples

ransac
------

.. autofunction:: skimage.measure.ransac


.. include:: skimage.measure.ransac.examples

regionprops
-----------

.. autofunction:: skimage.measure.regionprops


.. include:: skimage.measure.regionprops.examples

regionprops_table
-----------------

.. autofunction:: skimage.measure.regionprops_table


.. include:: skimage.measure.regionprops_table.examples

shannon_entropy
---------------

.. autofunction:: skimage.measure.shannon_entropy


.. include:: skimage.measure.shannon_entropy.examples

subdivide_polygon
-----------------

.. autofunction:: skimage.measure.subdivide_polygon


.. include:: skimage.measure.subdivide_polygon.examples


:class:`CircleModel`
--------------------


.. autoclass:: CircleModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

.. include:: skimage.measure.CircleModel.examples


:class:`EllipseModel`
---------------------


.. autoclass:: EllipseModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

.. include:: skimage.measure.EllipseModel.examples


:class:`LineModelND`
--------------------


.. autoclass:: LineModelND
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

.. include:: skimage.measure.LineModelND.examples

