0.26.x/_sources/api/skimage.measure.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`skimage.measure`
======================

.. automodule:: skimage.measure

.. currentmodule:: skimage.measure

.. autosummary::
   :nosignatures:

   approximate_polygon
   block_reduce
   blur_effect
   centroid
   euler_number
   find_contours
   grid_points_in_poly
   inertia_tensor
   inertia_tensor_eigvals
   intersection_coeff
   label
   manders_coloc_coeff
   manders_overlap_coeff
   marching_cubes
   mesh_surface_area
   moments
   moments_central
   moments_coords
   moments_coords_central
   moments_hu
   moments_normalized
   pearson_corr_coeff
   perimeter
   perimeter_crofton
   points_in_poly
   profile_line
   ransac
   regionprops
   regionprops_table
   shannon_entropy
   subdivide_polygon

   CircleModel
   EllipseModel
   LineModelND
   RansacModelProtocol


------------


.. autofunction:: approximate_polygon

    .. minigallery:: skimage.measure.approximate_polygon

------------


.. autofunction:: block_reduce

    .. minigallery:: skimage.measure.block_reduce

------------


.. autofunction:: blur_effect

    .. minigallery:: skimage.measure.blur_effect

------------


.. autofunction:: centroid

    .. minigallery:: skimage.measure.centroid

------------


.. autofunction:: euler_number

    .. minigallery:: skimage.measure.euler_number

------------


.. autofunction:: find_contours

    .. minigallery:: skimage.measure.find_contours

------------


.. autofunction:: grid_points_in_poly

    .. minigallery:: skimage.measure.grid_points_in_poly

------------


.. autofunction:: inertia_tensor

    .. minigallery:: skimage.measure.inertia_tensor

------------


.. autofunction:: inertia_tensor_eigvals

    .. minigallery:: skimage.measure.inertia_tensor_eigvals

------------


.. autofunction:: intersection_coeff

    .. minigallery:: skimage.measure.intersection_coeff

------------


.. autofunction:: label

    .. minigallery:: skimage.measure.label

------------


.. autofunction:: manders_coloc_coeff

    .. minigallery:: skimage.measure.manders_coloc_coeff

------------


.. autofunction:: manders_overlap_coeff

    .. minigallery:: skimage.measure.manders_overlap_coeff

------------


.. autofunction:: marching_cubes

    .. minigallery:: skimage.measure.marching_cubes

------------


.. autofunction:: mesh_surface_area

    .. minigallery:: skimage.measure.mesh_surface_area

------------


.. autofunction:: moments

    .. minigallery:: skimage.measure.moments

------------


.. autofunction:: moments_central

    .. minigallery:: skimage.measure.moments_central

------------


.. autofunction:: moments_coords

    .. minigallery:: skimage.measure.moments_coords

------------


.. autofunction:: moments_coords_central

    .. minigallery:: skimage.measure.moments_coords_central

------------


.. autofunction:: moments_hu

    .. minigallery:: skimage.measure.moments_hu

------------


.. autofunction:: moments_normalized

    .. minigallery:: skimage.measure.moments_normalized

------------


.. autofunction:: pearson_corr_coeff

    .. minigallery:: skimage.measure.pearson_corr_coeff

------------


.. autofunction:: perimeter

    .. minigallery:: skimage.measure.perimeter

------------


.. autofunction:: perimeter_crofton

    .. minigallery:: skimage.measure.perimeter_crofton

------------


.. autofunction:: points_in_poly

    .. minigallery:: skimage.measure.points_in_poly

------------


.. autofunction:: profile_line

    .. minigallery:: skimage.measure.profile_line

------------


.. autofunction:: ransac

    .. minigallery:: skimage.measure.ransac

------------


.. autofunction:: regionprops

    .. minigallery:: skimage.measure.regionprops

------------


.. autofunction:: regionprops_table

    .. minigallery:: skimage.measure.regionprops_table

------------


.. autofunction:: shannon_entropy

    .. minigallery:: skimage.measure.shannon_entropy

------------


.. autofunction:: subdivide_polygon

    .. minigallery:: skimage.measure.subdivide_polygon


.. autoclass:: CircleModel
  :members:
  :inherited-members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

    .. minigallery:: skimage.measure.CircleModel


.. autoclass:: EllipseModel
  :members:
  :inherited-members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

    .. minigallery:: skimage.measure.EllipseModel


.. autoclass:: LineModelND
  :members:
  :inherited-members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

    .. minigallery:: skimage.measure.LineModelND


.. autoclass:: RansacModelProtocol
  :members:
  :inherited-members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

    .. minigallery:: skimage.measure.RansacModelProtocol

